# ozymandias

./: LICENSE  README.markdown  ozymandias.cabal
.github/workflows/: ci.yaml
docs/: errors.markdown
src/lib/Ozymandias/: Etcd.hs  Job.hs  Monad.hs  Pod.hs  Podman.hs  Problem.hs  Util.hs
