cabal-version:      2.4
name:               ozymandias
version:            0.0.0.0
synopsis:           A decentralised container scheduler
homepage:           https://github.com/barrucadu/ozymandias
license:            MIT
license-file:       LICENSE
author:             Michael Walker
maintainer:         mike@barrucadu.co.uk

library
    exposed-modules:  Ozymandias.Etcd
                    , Ozymandias.Job
                    , Ozymandias.Monad
                    , Ozymandias.Podman
                    , Ozymandias.Problem
                    , Ozymandias.Util
    build-depends:    base ^>=4.15.0.0
                    , aeson ^>=1.5.6.0
                    , async ^>=2.2.3
                    , base64-bytestring ^>=1.2.0.0
                    , bytestring ^>=0.11.1.0
                    , http-client ^>=0.7.6
                    , http-types ^>=0.12.3
                    , network ^>=3.1.2.0
                    , text ^>=1.2.4.0
                    , transformers ^>=0.5.6.0
                    , unordered-containers ^>=0.2.13.0
    hs-source-dirs:   src/lib
    default-language: Haskell2010
    ghc-options:      -Wall -Werror

executable ozymandias
    main-is:          Main.hs
    build-depends:    base ^>=4.15.0.0
                    , aeson
                    , optparse-applicative ^>=0.16.1.0
                    , ozymandias
                    , text
    hs-source-dirs:   src/bin
    default-language: Haskell2010
    ghc-options:      -Wall -Werror
